--- a/test.ipynb
+++ b/test.ipynb
@@ -60,10 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\liang\\\\OneDrive\\\\Desktop\\\\Maple_Bot\\\\Asset\\\\Hero_Skills\\\\Flash Blade.PNG',\n",
+       " 'C:\\\\Users\\\\liang\\\\OneDrive\\\\Desktop\\\\Maple_Bot\\\\Asset\\\\Hero_Skills\\\\Puncture.PNG',\n",
+       " 'C:\\\\Users\\\\liang\\\\OneDrive\\\\Desktop\\\\Maple_Bot\\\\Asset\\\\Hero_Skills\\\\Raging Blow.PNG',\n",
+       " 'C:\\\\Users\\\\liang\\\\OneDrive\\\\Desktop\\\\Maple_Bot\\\\Asset\\\\Hero_Skills\\\\Sword Illusion.PNG']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "template_images = [img for img in glob.glob(r'C:\\Users\\liang\\OneDrive\\Desktop\\Maple_Bot\\Asset\\Hero_Skills\\*.png')] \n",
+    "\n",
+    "template_images"
+   ]
   }
  ],
  "metadata": {
