--- a/gym-maple/test.ipynb
+++ b/gym-maple/test.ipynb
@@ -130,34 +130,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import gym\n",
-    "import gym_example"
+    "import gym_maple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('gym_examples/MapleEnv-v0')\n"
+    "import gym_maple\n",
+    "import gym\n",
+    "\n",
+    "env = gym.make('gym_maple/MapleEnv-v0')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dict('Death By World Reaver': Discrete(30), 'Flash Blade': Discrete(2), 'Memory_Monk_Death_Left': Discrete(20), 'Memory_Monk_Death_Right': Discrete(20), 'Memory_Monk_Facing_Left': Discrete(51), 'Memory_Monk_Facing_Right': Discrete(51), 'Puncture': Discrete(1), 'Raging Blow': Discrete(1), 'Skill illusion': Discrete(2), 'World Reaver': Discrete(2))\n"
+      "Dict('Death By World Reaver': Discrete(50), 'Flash Blade': Discrete(2), 'Memory_Monk_Death_Left': Discrete(20), 'Memory_Monk_Death_Right': Discrete(20), 'Memory_Monk_Facing_Left': Discrete(51), 'Memory_Monk_Facing_Right': Discrete(51), 'Puncture': Discrete(1), 'Raging Blow': Discrete(1), 'Skill illusion': Discrete(2), 'World Reaver': Discrete(2))\n"
      ]
     }
    ],
@@ -167,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
