--- a/gym-maple/experiment.ipynb
+++ b/gym-maple/experiment.ipynb
@@ -233,19 +233,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "73f96bab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from Deep_Q_Learning import Deep_Q_Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ec709088",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "input_space = 4\n",
+    "output_space = 2\n",
+    "\n",
+    "model = Deep_Q_Model(input_space,output_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a9ee21fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.sequential.Sequential at 0x1b2b5c5e9e0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.Deep_Learning_Neural_Network()"
+   ]
   }
  ],
  "metadata": {
