--- a/gym-maple/test.ipynb
+++ b/gym-maple/test.ipynb
@@ -2,90 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Deep_Q_Learning import Deep_Q_Model\n",
-    "import numpy as np"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\liang\\AppData\\Roaming\\Python\\Python310\\site-packages\\keras\\optimizers\\optimizer_v2\\adam.py:110: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
-      "  super(Adam, self).__init__(name, **kwargs)\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = Deep_Q_Model(input_shape=[2],n_outputs=4)\n",
-    "\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Deep_Q_Learning.Deep_Q_Model at 0x2048962d870>"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#list = np.array([1,2])"
+    "import pyautogui"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#list[np.newaxis]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Deep_Q_Model' object has no attribute 'something'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\liang\\OneDrive\\Desktop\\Maple_Bot\\gym-maple\\test.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/liang/OneDrive/Desktop/Maple_Bot/gym-maple/test.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model\u001b[39m.\u001b[39;49msomething()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Deep_Q_Model' object has no attribute 'something'"
-     ]
-    }
-   ],
-   "source": [
-    "model.something()"
+    "time.sleep(3)\n",
+    "pyautogui.press('w')"
    ]
   }
  ],
