--- a/gym-maple/test.ipynb
+++ b/gym-maple/test.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time"
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "\n",
+    "# Sample deque data\n",
+    "data = deque([(np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 130.29965464]), [np.array(0), np.array(130.29965464)], [3], [0]),\n",
+    "              (np.array([0, 131.79529582]), [np.array(0), np.array(131.79529582)], [3], [0]),\n",
+    "              (np.array([0, 131.79529582]), [np.array(0), np.array(131.79529582)], [3], [1]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0]),\n",
+    "              (np.array([0, 137.90576493]), [np.array(0), np.array(137.90576493)], [3], [1]),\n",
+    "              (np.array([0, 0]), [np.array(0), np.array(0)], [3], [0])], maxlen=2000)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -18,28 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0]), [array(0), array(0)], [3], [0])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pyautogui"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.sleep(3)\n",
-    "pyautogui.press('w')"
+    "data[0]"
    ]
   }
  ],
